0.03
- Add LICENSE.
- Add REPOSITORY section to doc.
- Add align for text in button.
- Fix config() method and setting.
- Fix dependencies.
- Fix test dependencies.
- Improve doc.
- Improve functionality with 'files_dir' parameter to situation with global
  files directory and situation with absolute paths.
- Remove white space from code.
- Rename CHANGES to Changes.
- Rewrite buttons adding to buttons() method.
- Rewrite buttons() method to numerically sorted list.

0.02 (February 21, 2013)
- Add MANIFEST file.

0.01 (February 21, 2013)
- First version.