@@ -2,6 +2,7 @@
 - Add LICENSE.
 - Add REPOSITORY section to doc.
 - Add align for text in button.
+- Add padding for text in button.
 - Fix config() method and setting.
 - Fix dependencies.
 - Fix test dependencies.
